--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,31 @@ out/*
 /app/Tester/Release/vcpkg.applocal.log
 /app/Tester/x64/Release/Tester.Build.CppClean.log
 /app/Tester/x64/Release
+
+# macOS (https://github.com/github/gitignore/blob/main/Global/macOS.gitignore)
+
+# General
+.DS_Store
+__MACOSX/
+.AppleDouble
+.LSOverride
+Icon[]
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
